--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "Novlr",
   "subdomain": "novlr",
+	"domains": [
+ 	"novlr.org",
+ 	"www.novlr.org"
+ 	],
   "scripts": {
     "start": "node index.js"
   },
